<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="for_faster_and_more_secure_checkout_save_your_card">For faster and more secure checkout, save your card</string>
    <string name="card_number">Card Number</string>
    <string name="scan">scan</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_holder_name_invalid">Name must be 3 characters at least!</string>
    <string name="date_invalid">Please put a valid date!</string>
    <string name="cvv_invalid">Please enter a valid CVV!</string>
    <string name="card_number_invalid">Card number is invalid!</string>
    <string name="scan_a_card">Scan a card</string>
    <string name="off">Off</string>
    <string name="on">On</string>
</resources>