<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/card_input_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <company.tap.tapcardinputkit.views.CardNumberEditText
            android:id="@+id/card_number"
            android:drawableEnd="@drawable/ic_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/card_number" />

        <company.tap.tapcardinputkit.views.CardScannerButton
            android:id="@+id/card_scanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <company.tap.tapcardinputkit.views.CardExpirationDateEditText
            android:id="@+id/expiration_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:hint="@string/mm_yy" />

        <company.tap.tapcardinputkit.views.CardCvvEditText
            android:id="@+id/card_cvv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:hint="@string/cvv" />

    </LinearLayout>

    <company.tap.tapcardinputkit.views.CardHolderNameEditText
        android:id="@+id/holder_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_holder_name" />

    <company.tap.tapcardinputkit.views.CardSaveSwitch
        android:id="@+id/save_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/for_faster_and_more_secure_checkout_save_your_card" />

</LinearLayout>